# PVLib_data_generator_GUI

./: .dockerignore  Dockerfile  Pipfile  README.md  index.html  main.py  package-lock.json  package.json  pyproject.toml  render.yaml  requirements.txt  vercel.json
.streamlit/: config.toml
api/: index.py
app/: report.py
core/: adapters.py  cache.py  irradiance.py  mapping.py  model.py  timeutils.py
src/: App.jsx  index.css
src/components/: BackgroundCanvas.jsx  LocationMap.jsx
